<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:card_view="http://schemas.android.com/tools"
    android:transitionName="@string/transition_string"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:overScrollMode="always">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"

        android:orientation="vertical"
        android:id="@+id/linear_lay">


        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="380dp"
            android:layout_below="@+id/linear_lay">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="300dp"
                android:background="@drawable/gradient_bg"
                android:orientation="vertical">
<!--
                <de.hdodenhof.circleimageview.CircleImageView
                    android:id="@+id/expandedImage"
                    android:layout_width="150dp"
                    android:layout_height="150dp"
                    android:transitionName="imageshared"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginTop="45dp"
                    android:background="@color/transparent" />-->


                <android.support.v7.widget.CardView
                    android:id="@+id/card_view"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:clickable="true"
                    android:elevation="3dp"
                    android:focusable="true"
                    android:transitionName="@string/transition_string"
                    card_view:cardCornerRadius="8dp">

                    <ImageView
                        android:id="@+id/expandedImage"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:clickable="true"
                        android:longClickable="true"
                        android:scaleType="fitXY" />

                    <View
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:alpha="0.3"
                        android:background="@drawable/black_bg">

                    </View>

                    <!--<ImageView
                    android:id="@+id/centerImageView"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true"
                    android:src="@mipmap/ic_launcher" />-->

                    <TextView
                        android:id="@+id/service_title"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_centerInParent="false"
                        android:layout_gravity="bottom"
                        android:layout_marginBottom="70dp"
                        android:layout_marginLeft="15dp"
                        android:gravity="bottom"
                        android:text="Text Goes Here"
                        android:textColor="@color/white"
                        android:textSize="26sp"
                        android:textStyle="bold" />


                </android.support.v7.widget.CardView>

              <!--  <android.support.v7.widget.CardView
                    android:id="@+id/card_view"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_gravity="center"
                    android:clickable="true"
                    android:elevation="3dp"
                    android:focusable="true"
                    android:onClick="animateIntent"
                    android:transitionName="@string/transition_string"
                    card_view:cardCornerRadius="8dp">

                    <ImageView
                        android:id="@+id/expandedImage"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_gravity="center"
                        android:background="@drawable/black_bg"
                        android:scaleType="fitXY"
                        android:transitionName="imageshared" />

                </android.support.v7.widget.CardView>-->


                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginTop="10dp"
                    android:textColor="#fff"
                    android:textSize="21sp"
                    android:textStyle="bold" />
            </LinearLayout>

            <android.support.v7.widget.CardView
                android:layout_width="350dp"
                android:layout_height="120dp"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="240dp"
                android:clickable="true">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:clickable="true"
                    android:orientation="horizontal"
                    android:weightSum="3">

                    <LinearLayout
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="1.5"
                        android:clickable="true"
                        android:gravity="center"
                        android:orientation="vertical">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:fontFamily="@font/lusitana"
                            android:text="Followers"
                            android:textSize="20sp" />

                        <TextView
                            android:id="@+id/counter_text"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:fontFamily="@font/lusitana"
                            android:paddingTop="10dp"
                            android:textColor="@color/startblue"
                            android:textSize="20sp"
                            android:textStyle="bold" />

                    </LinearLayout>

                    <RelativeLayout
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="1.5"
                        android:clickable="true"
                        android:gravity="center"
                        android:orientation="vertical">

                        <Button
                            android:id="@+id/button_subscribe"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:background="@drawable/rounded_btn"
                            android:clickable="true"
                            android:fontFamily="@font/lusitana"
                            android:text="@string/subscribes"
                            android:textColor="@color/white"
                            android:textSize="18sp"
                            android:textStyle="normal|bold"
                            android:visibility="gone" />

                        <Button
                            android:id="@+id/button_unsubscribe"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:background="@drawable/unsub_bg"
                            android:clickable="true"
                            android:focusable="true"
                            android:fontFamily="@font/lusitana"
                            android:paddingEnd="15dp"
                            android:paddingLeft="15dp"
                            android:paddingRight="15dp"
                            android:paddingStart="15dp"
                            android:text="@string/unsubscribe"
                            android:textColor="@android:color/black"
                            android:textSize="18sp"
                            android:textStyle="normal|bold" />
                    </RelativeLayout>

                </LinearLayout>


            </android.support.v7.widget.CardView>
        </RelativeLayout>
        <com.google.android.gms.ads.AdView xmlns:ads="http://schemas.android.com/apk/res-auto"
            android:id="@+id/adView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            ads:adSize="BANNER"
            ads:adUnitId="ca-app-pub-0125456543345927/3191063684" />
        <LinearLayout
            android:layout_width="360dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="10dp"
            android:orientation="vertical">


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="20dp"
                android:layout_marginTop="25dp"
                android:orientation="horizontal"
                android:paddingLeft="25dp" android:paddingStart="25dp">


                <ImageView
                    android:layout_width="36dp"
                    android:layout_height="36dp"
                    android:contentDescription="@string/todo"
                    android:src="@drawable/ic_description_black_24dp" />

                <TextView
                    android:id="@+id/desc_details"

                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:fontFamily="@font/nunito"
                    android:text="@string/service_description"
                    android:textColor="@color/colorBtnText"
                    android:textSize="18sp" />
            </LinearLayout>
        </LinearLayout>

    </LinearLayout>
</ScrollView>